# ProofOfCoffee

./: README.md
CrossCloudOCIAWSFederationYubikeyOIDCVault/: README.md  backend.tf  main.tf  vault-aws.tf  vault-oci.tf  vault-oidc.tf
DynamicIaaSCredentialsViaYubikeyPIV/: README.md  provision-yubikey.sh  terraform.tfvars
DynamicIaaSCredentialsViaYubikeyPIV/policies/: aws-terraform.hcl  vault-pki.hcl
FIDO2OIDCTFProvisionedCNApps/: README.md  dex.yml  handler.py  lambda.hcl  lambda.tf  provider.tf  secret.tf
MultiPartyFrostOCIConfidentialComputeEnclaves/: Dockerfile.auth  Dockerfile.ca  Dockerfile.coordinator  Dockerfile.tlog  Makefile  README.md  docker-compose.yml  requirements.txt
MultiPartyFrostOCIConfidentialComputeEnclaves/.github/workflows/: coffeeproof-simpleflowing.yml  poc-ci.yml  terraform-oci.yml
MultiPartyFrostOCIConfidentialComputeEnclaves/clients/: cli.py
MultiPartyFrostOCIConfidentialComputeEnclaves/common/: attestation_snp.py  grpc_attest.py  mpc_provider.py
MultiPartyFrostOCIConfidentialComputeEnclaves/proto/: mpc.proto
MultiPartyFrostOCIConfidentialComputeEnclaves/servers/: auth_server.py  ca_server.py  coordinator_server.py  interceptors.py  tlog_server.py
MultiPartyFrostOCIConfidentialComputeEnclaves/terraform/oci/: main.tf  outputs.tf  variables.tf
MultiPartyFrostOCIConfidentialComputeEnclaves/terraform/oci/service/: main.tf
MultiPartyFrostOCIConfidentialComputeEnclaves/terraform/oci/templates/: cloud_init.yaml
RotatingDatastoresAWSandOCI/: BeyondProofOfCoffee.txt  DESIGN.md  Dockerfile.md  Makefile  README.md  proofofconcept-ci-with-digest-pr.yml  terraform.auto.tfvars.example
RotatingDatastoresAWSandOCI/aws/: eventbridge.tf  iam.tf  kms.tf  lambda.tf  main.tf  outputs.tf  s3.tf  secrets.tf  variables.tf
RotatingDatastoresAWSandOCI/oci/: DocMe.sh  events.tf  functions.tf  iam.tf  kms.tf  main.tf  object_storage.tf  outputs.tf  variables.tf  vault.tf
RotatingDatastoresAWSandOCI/shared/image/: Dockerfile  main.py  requirements.txt
SelfServiceEmployeeOnboarding/: README.md  register_yubikey.py  tf-onboard.tf
SelfServiceEmployeeOnboarding/policies/: k8s-read-secret.hcl
TFVaultPKIYubikeyPIVClientAuthKubes/: README.md  kind-cluster.tf  sign-csf.tf  vault-pki.tf
VaultSignedYubikeyPasswordlessSSH/: README.md  ssh-otp-login.sh  verify_ssh_jwt.sh
Yubikey-ProtectedVaultUnseal-ShamirOTP/: README.md  unseal-with-yubikey.sh
YubikeyAPIGateway/:  Makefile  README.md  gitignore
YubikeyAPIGateway/.github/workflows/: test.yml
YubikeyAPIGateway/gateway/: app.py  requirements.txt
YubikeyAPIGateway/scripts/: unwrap_api_key.sh
YubikeyAPIGateway/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
YubikeyDynamicSSHVaultTFManagedNodes/: README.md  main.tf  provider.tf  vault-config.hcl  versions.tf
YubikeyOPTPAppRoleLoginDynamicDB/: README.md  approle.tf  db-engine.tf  dynamic-db-creds.tf  get-secret-id.sh  postgres.tf  provider.tf  unwrap.tf  variables.tf
YubikeyVaultEncryptionKeysAutomatedKeyRotation/: README.md  backend.tf  encrypt.tf  rotate-key.sh  tf-wrapper.sh
ZeroTrustAPIKeyMinting/: .env.example  DESIGN.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  policy.json  requirements.txt
ZeroTrustAPIKeyMinting/.github/workflows/: frost-ci.yml  opa-bundle.yml  poc.yml
ZeroTrustAPIKeyMinting/certs/: README.md
ZeroTrustAPIKeyMinting/frost/: Cargo.toml  Dockerfile
ZeroTrustAPIKeyMinting/frost/coordinator/: Cargo.toml  README.md
ZeroTrustAPIKeyMinting/frost/coordinator/src/: main.rs
ZeroTrustAPIKeyMinting/frost/keygen/: Cargo.toml
ZeroTrustAPIKeyMinting/frost/keygen/src/: main.rs
ZeroTrustAPIKeyMinting/frost/signer/: Cargo.toml
ZeroTrustAPIKeyMinting/frost/signer/src/: main.rs
ZeroTrustAPIKeyMinting/infra/envoy/: envoy-mtls-sds.yaml  envoy.yaml
ZeroTrustAPIKeyMinting/infra/terraform/: README.md  compute.tf  frost_compute.tf  frost_network.tf  frost_outputs.tf  kms.tf  network.tf  oke.tf  oke_network.tf  outputs.tf  provider.tf  variables.tf
ZeroTrustAPIKeyMinting/k8s/cert-manager/: cluster-issuers.yaml  frost-certs.yaml
ZeroTrustAPIKeyMinting/k8s/frost/: coordinator.yaml  daemonset.yaml  limits-quota.yaml  namespace.yaml  networkpolicies.yaml  secrets.example.yaml  service.yaml
ZeroTrustAPIKeyMinting/opa/: kms_sig_check.rego
ZeroTrustAPIKeyMinting/policy/: README.md  combined.rego  data.json  entrypoint.rego  jwt_claims.rego  kms_receipt.rego  mtls_san.rego  opa-config.yaml  scope_ttl.rego  sev_snp.rego
ZeroTrustAPIKeyMinting/policy/tests/: entrypoint_test.rego  jwt_claims_test.rego  kms_receipt_test.rego  mtls_sans_test.rego  scope_ttl_tests.rego  sev_snp_test.rego
ZeroTrustAPIKeyMinting/src/attestation/: sev_snp.py
ZeroTrustAPIKeyMinting/src/auth/: engineer_auth.py  piv.py  webauthn_verify.py
ZeroTrustAPIKeyMinting/src/cli/: mint.py  mint_wrapper.py  piv_approver.py
ZeroTrustAPIKeyMinting/src/issuer/: policies.py  token_issuer.py
ZeroTrustAPIKeyMinting/src/mpc/: approvals.py  coordinator.py  frost.py  frost_client.py  oci_hsm.py  shares.py  yubihsm.py
ZeroTrustAPIKeyMinting/src/oci/: kms_approval.py
ZeroTrustAPIKeyMinting/src/server/: api.py  webauthn_api.py
ZeroTrustAPIKeyMinting/static/: webauthn_demo.html
ZeroTrustAPIKeyMinting/tests/: test_frost_chaos.py  test_mint.py
ZeroTrustAPIKeyMinting/verifiers/go/: main.go
ZeroTrustAPIKeyMinting/verifiers/node/: index.js
ZeroTrustAPIKeyMinting/verifiers/python/: verifier.py
ZeroTrustAPIKeyMinting/web/: index.html
ZeroTrustOCIFunctionsYubikeyTFPlans/: README.md  handler.py  oci-function.tf  providers.tf  vault-approle.tf  vault-config.hcl
