# frost-keygen/Cargo.toml
#
# ===========================
# Security & Ops Notes
# ===========================
# - This binary implements **dealer-style** key generation. It must NEVER be used for production
#   without strict controls (TEE, audit, ephemeral execution) — replace with **FROST DKG**.
# - Pin exact versions to mitigate supply-chain drift; keep Cargo.lock in VCS and enforce in CI.
# - Build in a minimal container; strip symbols in release builds; publish SBOM (cargo auditable).
#
# ===========================
# Tunables / Config
# ===========================
# - Reads env vars: FROST_T, FROST_N, FROST_OUT (documented in main.rs).
# - No runtime network access; pure compute + filesystem output.
#
# ===========================
# Improvements / Production
# ===========================
# - Swap to DKG + per-signer generation inside signer pods (no central dealer).
# - Encrypt share artifacts with OCI KMS (envelope) until consumed, or skip disk and deliver over mTLS.
# - Add checksums/signatures for artifacts; log artifacts metadata to append-only audit log with WORM retention.

[package]
name = "frost-keygen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FROST Ed25519 primitives
frost-ed25519 = "0.7"

# RNGs for keygen
rand_core = "0.6"
rand_chacha = "0.3"

# Error ergonomics (optional; handy if you extend the tool)
anyhow = "1.0"

# For parity with the rest of the repo; not strictly required in this file
base64 = "0.22"